--- a/build.gradle
+++ b/build.gradle
@@ -103,10 +103,9 @@ curseforge {
     project {
         id = "${project.curseforge_id}"
         mainArtifact (remapJar){
-            displayName = "v" + project.mod_version + " Fabric " + project.minecraft_version
+            displayName = "v" + project.mod_version + " Fabric "
         }
         changelogType = 'markdown'
-        changelog = file('changelog.md')
         releaseType = 'release'
         addGameVersion "Fabric"
         addGameVersion project.minecraft_version
@@ -118,7 +117,7 @@ modrinth {
     projectId = project.modrinth_id // The ID of your Modrinth project. Slugs will not work.
     versionNumber = project.mod_version // The (preferably SemVer) version of the mod. If not specified, it'll use the `version` declaration
     versionType = "release" // This is the default -- can also be `beta` or `alpha`
-    versionName =  "v" + project.mod_version + " for Fabric " + project.minecraft_version// This is the default -- can also be `beta` or `alpha`
+    versionName =  "v" + project.mod_version + " for Fabric "// This is the default -- can also be `beta` or `alpha`
     uploadFile = remapJar // Tells Minotaur to use the remapped jar
     gameVersions = [project.minecraft_version] // An array of game versions the version supports
     loaders = ['fabric'] // Self-explanatory.
